<resources>
    <string name="app_name">Calculator2</string>
    <string name="calculation">19 * 5 + 278</string>
    <string name="result">373</string>

    <string name="c">C</string>
    <string name="d">D</string>

    <string name="half">1/2</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="multiply">x</string>
    <string name="div">/</string>
    <string name="reminder">%</string>
</resources>