<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        style="@style/textView"
        android:text="@string/calculation"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        style="@style/textView"
        android:layout_marginBottom="12dp"
        android:text="@string/result"
        android:textSize="40sp"
        tools:ignore="RtlHardcoded" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="12dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <Button
            style="@style/button.OrangeCircle"
            android:text="@string/c"
            android:textColor="@color/white" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/d"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/reminder"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/div"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/seven" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/eight" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/nine" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/multiply"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/four" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/five" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/six" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/sub"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/one" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/two" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/three" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button"
            android:text="@string/sum"
            android:textColor="@color/orange"
            android:background="@drawable/number_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <Button
            style="@style/button.OrangeCircle"
            android:text="@string/dot"
            android:textColor="@color/white" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.VioletCircle"
            android:text="@string/zero" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.OrangeCircle"
            android:text="@string/half"
            android:textColor="@color/white" />

        <View
            style="@style/viewStyle"/>

        <Button
            style="@style/button.OrangeCircle"
            android:text="@string/equal"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>